<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/addColumn_dialog_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_playlist_add_black_24dp"
            android:drawablePadding="10dp"
            android:text="@string/add_column_memo"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/addColumn_dialog_InputBox"
            style="@style/addColumn_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:hint="欄位名稱"
            app:hintTextColor="@color/colorPrimary"
            app:layout_constraintStart_toStartOf="@id/addColumn_dialog_title"
            app:layout_constraintTop_toBottomOf="@id/addColumn_dialog_title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/addColumn_dialog_Input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/addColumn_dialog_cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="14dp"
            android:text="@string/cancel"
            android:textColor="@color/colorAccent"
            app:layout_constraintEnd_toStartOf="@id/addColumn_dialog_confirmButton"
            app:layout_constraintTop_toBottomOf="@id/addColumn_dialog_InputBox"
            app:layout_constraintTop_toTopOf="@id/addColumn_dialog_confirmButton"
            app:strokeColor="@color/colorPrimary" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/addColumn_dialog_confirmButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/confirm"
            android:textColor="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/addColumn_dialog_InputBox"
            app:strokeColor="@color/colorPrimary" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>